// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two and two - small 1`] = `
Array [
  <div>
    <div>
      <div
        dir="auto"
      >
        secondary-1
      </div>
    </div>
    <div />
    <div>
      <div
        dir="auto"
      >
        secondary-2
      </div>
    </div>
  </div>,
  <div />,
  <div>
    <div
      dir="auto"
    >
      support-1
    </div>
  </div>,
  <div />,
  <div>
    <div
      dir="auto"
    >
      support-2
    </div>
  </div>,
]
`;

exports[`2. secondary two and two - medium 1`] = `
<div>
  <div>
    <div>
      <div
        dir="auto"
      >
        secondary-1
      </div>
    </div>
    <div />
    <div>
      <div
        dir="auto"
      >
        secondary-2
      </div>
    </div>
  </div>
  <div />
  <div>
    <div>
      <div
        dir="auto"
      >
        support-1
      </div>
    </div>
    <div />
    <div>
      <div
        dir="auto"
      >
        support-2
      </div>
    </div>
  </div>
</div>
`;

exports[`3. secondary two and two - wide 1`] = `
<div>
  <div>
    <div
      dir="auto"
    >
      secondary-1
    </div>
  </div>
  <div />
  <div>
    <div
      dir="auto"
    >
      support-1
    </div>
  </div>
  <div />
  <div>
    <div
      dir="auto"
    >
      secondary-2
    </div>
  </div>
  <div />
  <div>
    <div
      dir="auto"
    >
      support-2
    </div>
  </div>
</div>
`;

exports[`4. secondary two and two - huge 1`] = `
<div>
  <div>
    <div
      dir="auto"
    >
      secondary-1
    </div>
  </div>
  <div />
  <div>
    <div
      dir="auto"
    >
      support-1
    </div>
  </div>
  <div />
  <div>
    <div
      dir="auto"
    >
      secondary-2
    </div>
  </div>
  <div />
  <div>
    <div
      dir="auto"
    >
      support-2
    </div>
  </div>
</div>
`;
